cs101_information_objects.nim


proc ParameterScaledValue_destroy*(self: ParameterScaledValue) {.
    importc: "ParameterScaledValue_destroy",  cdecl.}
## *
##  \brief Create a parameter measured values, scaled (P_ME_NB_1) information object
##
##  NOTE: Can only be used in control direction (with COT=ACTIVATION) or in monitoring
##  direction as a response of an interrogation request (with COT=INTERROGATED_BY...).
##
##  Possible values of qpm:
##  0 = not used
##  1 = threshold value
##  2 = smoothing factor (filter time constant)
##  3 = low limit for transmission of measured values
##  4 = high limit for transmission of measured values
##  5..31 = reserved for standard definitions of CS101 (compatible range)
##  32..63 = reserved for special use (private range)
##
##  \param[in] self existing instance to reuse or NULL to create a new instance
##  \param[in] ioa information object address
##  \param[in] value the scaled value (–32.768 .. 32.767)
##  \param[in] qpm qualifier of measured values (\ref QualifierOfParameterMV)
##
##  \return the initialized instance
##

proc ParameterScaledValue_create*(self: ParameterScaledValue; ioa: cint; value: cint;
                                 qpm: QualifierOfParameterMV): ParameterScaledValue {.
    importc: "ParameterScaledValue_create",  cdecl.}
proc ParameterScaledValue_getValue*(self: ParameterScaledValue): cint {.
    importc: "ParameterScaledValue_getValue",  cdecl.}
proc ParameterScaledValue_setValue*(self: ParameterScaledValue; value: cint) {.
    importc: "ParameterScaledValue_setValue",  cdecl.}
## *
##  \brief Returns the qualifier of measured values (QPM)
##
##  \return the QPM value (\ref QualifierOfParameterMV)
##

proc ParameterScaledValue_getQPM*(self: ParameterScaledValue): QualifierOfParameterMV {.
    importc: "ParameterScaledValue_getQPM",  cdecl.}
## *****************************************************
##  ParameterFloatValue : MeasuredValueShort
## ***************************************************

type
  ParameterFloatValue* = ptr sMeasuredValueShort

proc ParameterFloatValue_destroy*(self: ParameterFloatValue) {.
    importc: "ParameterFloatValue_destroy",  cdecl.}
## *
##  \brief Create a parameter measured values, short floating point (P_ME_NC_1) information object
##
##  NOTE: Can only be used in control direction (with COT=ACTIVATION) or in monitoring
##  direction as a response of an interrogation request (with COT=INTERROGATED_BY...).
##
##  Possible values of qpm:
##  0 = not used
##  1 = threshold value
##  2 = smoothing factor (filter time constant)
##  3 = low limit for transmission of measured values
##  4 = high limit for transmission of measured values
##  5..31 = reserved for standard definitions of CS101 (compatible range)
##  32..63 = reserved for special use (private range)
##
##  \param[in] self existing instance to reuse or NULL to create a new instance
##  \param[in] ioa information object address
##  \param[in] value short floating point number
##  \param[in] qpm qualifier of measured values (QPM - \ref QualifierOfParameterMV)
##
##  \return the initialized instance
##

proc ParameterFloatValue_create*(self: ParameterFloatValue; ioa: cint; value: cfloat;
                                qpm: QualifierOfParameterMV): ParameterFloatValue {.
    importc: "ParameterFloatValue_create",  cdecl.}
proc ParameterFloatValue_getValue*(self: ParameterFloatValue): cfloat {.
    importc: "ParameterFloatValue_getValue",  cdecl.}
proc ParameterFloatValue_setValue*(self: ParameterFloatValue; value: cfloat) {.
    importc: "ParameterFloatValue_setValue",  cdecl.}
## *
##  \brief Returns the qualifier of measured values (QPM)
##
##  \return the QPM value (\ref QualifierOfParameterMV)
##

proc ParameterFloatValue_getQPM*(self: ParameterFloatValue): QualifierOfParameterMV {.
    importc: "ParameterFloatValue_getQPM",  cdecl.}
## ******************************************
##  ParameterActivation : InformationObject
## *****************************************

type
  ParameterActivation* = ptr sParameterActivation

proc ParameterActivation_destroy*(self: ParameterActivation) {.
    importc: "ParameterActivation_destroy",  cdecl.}
## *
##  \brief Create a parameter activation (P_AC_NA_1) information object
##
##  \param[in] self existing instance to reuse or NULL to create a new instance
##  \param[in] ioa information object address
##  \param[in] qpa qualifier of parameter activation (3 = act/deact of persistent cyclic or periodic transmission)
##
##  \return the initialized instance
##

proc ParameterActivation_create*(self: ParameterActivation; ioa: cint;
                                qpa: QualifierOfParameterActivation): ParameterActivation {.
    importc: "ParameterActivation_create",  cdecl.}
## *
##  \brief Get the qualifier of parameter activation (QPA) value
##
##  \return 3 = act/deact of persistent cyclic or periodic transmission
##

proc ParameterActivation_getQuality*(self: ParameterActivation): QualifierOfParameterActivation {.
    importc: "ParameterActivation_getQuality",  cdecl.}
## **********************************************************************
##  EventOfProtectionEquipmentWithCP56Time2a : InformationObject
## *********************************************************************

type
  EventOfProtectionEquipmentWithCP56Time2a* = ptr sEventOfProtectionEquipmentWithCP56Time2a

proc EventOfProtectionEquipmentWithCP56Time2a_destroy*(
    self: EventOfProtectionEquipmentWithCP56Time2a) {.
    importc: "EventOfProtectionEquipmentWithCP56Time2a_destroy",  cdecl.}
proc EventOfProtectionEquipmentWithCP56Time2a_create*(
    self: EventOfProtectionEquipmentWithCP56Time2a; ioa: cint; event: SingleEvent;
    elapsedTime: CP16Time2a; timestamp: CP56Time2a): EventOfProtectionEquipmentWithCP56Time2a {.
    importc: "EventOfProtectionEquipmentWithCP56Time2a_create",  cdecl.}
proc EventOfProtectionEquipmentWithCP56Time2a_getEvent*(
    self: EventOfProtectionEquipmentWithCP56Time2a): SingleEvent {.
    importc: "EventOfProtectionEquipmentWithCP56Time2a_getEvent",
     cdecl.}
proc EventOfProtectionEquipmentWithCP56Time2a_getElapsedTime*(
    self: EventOfProtectionEquipmentWithCP56Time2a): CP16Time2a {.
    importc: "EventOfProtectionEquipmentWithCP56Time2a_getElapsedTime",
     cdecl.}
proc EventOfProtectionEquipmentWithCP56Time2a_getTimestamp*(
    self: EventOfProtectionEquipmentWithCP56Time2a): CP56Time2a {.
    importc: "EventOfProtectionEquipmentWithCP56Time2a_getTimestamp",
     cdecl.}
## **************************************************************************
##  PackedStartEventsOfProtectionEquipmentWithCP56Time2a : InformationObject
## *************************************************************************

type
  PackedStartEventsOfProtectionEquipmentWithCP56Time2a* = ptr sPackedStartEventsOfProtectionEquipmentWithCP56Time2a

proc PackedStartEventsOfProtectionEquipmentWithCP56Time2a_destroy*(
    self: PackedStartEventsOfProtectionEquipmentWithCP56Time2a) {.
    importc: "PackedStartEventsOfProtectionEquipmentWithCP56Time2a_destroy",
     cdecl.}
proc PackedStartEventsOfProtectionEquipmentWithCP56Time2a_create*(
    self: PackedStartEventsOfProtectionEquipmentWithCP56Time2a; ioa: cint;
    event: StartEvent; qdp: QualityDescriptorP; elapsedTime: CP16Time2a;
    timestamp: CP56Time2a): PackedStartEventsOfProtectionEquipmentWithCP56Time2a {.
    importc: "PackedStartEventsOfProtectionEquipmentWithCP56Time2a_create",
     cdecl.}
proc PackedStartEventsOfProtectionEquipmentWithCP56Time2a_getEvent*(
    self: PackedStartEventsOfProtectionEquipmentWithCP56Time2a): StartEvent {.
    importc: "PackedStartEventsOfProtectionEquipmentWithCP56Time2a_getEvent",
     cdecl.}
proc PackedStartEventsOfProtectionEquipmentWithCP56Time2a_getQuality*(
    self: PackedStartEventsOfProtectionEquipmentWithCP56Time2a): QualityDescriptorP {.
    importc: "PackedStartEventsOfProtectionEquipmentWithCP56Time2a_getQuality",
     cdecl.}
proc PackedStartEventsOfProtectionEquipmentWithCP56Time2a_getElapsedTime*(
    self: PackedStartEventsOfProtectionEquipmentWithCP56Time2a): CP16Time2a {.importc: "PackedStartEventsOfProtectionEquipmentWithCP56Time2a_getElapsedTime",
     cdecl.}
proc PackedStartEventsOfProtectionEquipmentWithCP56Time2a_getTimestamp*(
    self: PackedStartEventsOfProtectionEquipmentWithCP56Time2a): CP56Time2a {.importc: "PackedStartEventsOfProtectionEquipmentWithCP56Time2a_getTimestamp",
     cdecl.}
## **********************************************************************
##  PackedOutputCircuitInfoWithCP56Time2a : InformationObject
## *********************************************************************

type
  PackedOutputCircuitInfoWithCP56Time2a* = ptr sPackedOutputCircuitInfoWithCP56Time2a

proc PackedOutputCircuitInfoWithCP56Time2a_destroy*(
    self: PackedOutputCircuitInfoWithCP56Time2a) {.
    importc: "PackedOutputCircuitInfoWithCP56Time2a_destroy",  cdecl.}
proc PackedOutputCircuitInfoWithCP56Time2a_create*(
    self: PackedOutputCircuitInfoWithCP56Time2a; ioa: cint; oci: OutputCircuitInfo;
    qdp: QualityDescriptorP; operatingTime: CP16Time2a; timestamp: CP56Time2a): PackedOutputCircuitInfoWithCP56Time2a {.
    importc: "PackedOutputCircuitInfoWithCP56Time2a_create",  cdecl.}
proc PackedOutputCircuitInfoWithCP56Time2a_getOCI*(
    self: PackedOutputCircuitInfoWithCP56Time2a): OutputCircuitInfo {.
    importc: "PackedOutputCircuitInfoWithCP56Time2a_getOCI",  cdecl.}
proc PackedOutputCircuitInfoWithCP56Time2a_getQuality*(
    self: PackedOutputCircuitInfoWithCP56Time2a): QualityDescriptorP {.
    importc: "PackedOutputCircuitInfoWithCP56Time2a_getQuality",  cdecl.}
proc PackedOutputCircuitInfoWithCP56Time2a_getOperatingTime*(
    self: PackedOutputCircuitInfoWithCP56Time2a): CP16Time2a {.
    importc: "PackedOutputCircuitInfoWithCP56Time2a_getOperatingTime",
     cdecl.}
proc PackedOutputCircuitInfoWithCP56Time2a_getTimestamp*(
    self: PackedOutputCircuitInfoWithCP56Time2a): CP56Time2a {.
    importc: "PackedOutputCircuitInfoWithCP56Time2a_getTimestamp",
     cdecl.}
## *********************************************
##  DoubleCommandWithCP56Time2a : DoubleCommand
## ********************************************

type
  DoubleCommandWithCP56Time2a* = ptr sDoubleCommandWithCP56Time2a

proc DoubleCommandWithCP56Time2a_destroy*(self: DoubleCommandWithCP56Time2a) {.
    importc: "DoubleCommandWithCP56Time2a_destroy",  cdecl.}
proc DoubleCommandWithCP56Time2a_create*(self: DoubleCommandWithCP56Time2a;
                                        ioa: cint; command: cint;
                                        selectCommand: bool; qu: cint;
                                        timestamp: CP56Time2a): DoubleCommandWithCP56Time2a {.
    importc: "DoubleCommandWithCP56Time2a_create",  cdecl.}
proc DoubleCommandWithCP56Time2a_getQU*(self: DoubleCommandWithCP56Time2a): cint {.
    importc: "DoubleCommandWithCP56Time2a_getQU",  cdecl.}
proc DoubleCommandWithCP56Time2a_getState*(self: DoubleCommandWithCP56Time2a): cint {.
    importc: "DoubleCommandWithCP56Time2a_getState",  cdecl.}
proc DoubleCommandWithCP56Time2a_isSelect*(self: DoubleCommandWithCP56Time2a): bool {.
    importc: "DoubleCommandWithCP56Time2a_isSelect",  cdecl.}
proc DoubleCommandWithCP56Time2a_getTimestamp*(self: DoubleCommandWithCP56Time2a): CP56Time2a {.
    importc: "DoubleCommandWithCP56Time2a_getTimestamp",  cdecl.}
## ************************************************
##  StepCommandWithCP56Time2a : InformationObject
## ***********************************************

type
  StepCommandWithCP56Time2a* = ptr sStepCommandWithCP56Time2a
